--- a/references.bib
+++ b/references.bib
@@ -73,3 +73,12 @@
 	date = {2021},
 	url = {https://CRAN.R-project.org/package=kableExtra}
 }
+
+@book{rand2023,
+	title = {Data Analysis in R for Becoming a Bioscientist},
+	author = {Rand, Emma},
+	year = {2023},
+	month = {05},
+	date = {2023-05},
+	url = {https://3mmarand.github.io/R4BABS/}
+}
