--- a/r4babs2/week-2/workshop.qmd
+++ b/r4babs2/week-2/workshop.qmd
@@ -17,11 +17,11 @@ In this workshop you will get practice in applying, interpreting and reporting s
 
 
 
-![Allison Horst cartton: "linear regression dragons"](images/linear-regression-dragon.png){fig-alt="Two blue dragons stand on scales next to a vertical yardstick showing one slightly taller than the other. Regression estimates are shown at the top as an equation: 'weight (tons) = 2.4 + 0.3*height', with explanatory text reading 'If all other variables are constant, we expect a 1 foot taller dragon to weight 0.3 tons more, on average.' width="800"}
+![Allison Horst cartton: "linear regression dragons"](images/linear-regression-dragon.png){fig-alt="Two blue dragons stand on scales next to a vertical yardstick showing one slightly taller than the other. Regression estimates are shown at the top as an equation: 'weight (tons) = 2.4 + 0.3*height', with explanatory text reading 'If all other variables are constant, we expect a 1 foot taller dragon to weight 0.3 tons more, on average.'" width="800"}
 
 ## Session overview
 
-In this session you will 
+In this session you will carry out, interpret and report on a single linear regression. 
 
 ## Philosophy
 
@@ -68,10 +68,6 @@ These four symbols are used at the beginning of each instruction so you know whe
 ## Linear Regression
 
 The data in [plant.xlsx](../data/plant.xlsx) is a set of observations of plant growth over two months. The researchers planted the seeds and harvested, dried and weighed a plant each day from day 10 so all the data points are independent of each other.
-
-```{r}
-library(readxl)
-```
 
 ![](images/do_in_R.png) Save a copy of [plant.xlsx](../data/plant.xlsx) to your `data-raw` folder and import it.
 
@@ -168,6 +164,20 @@ The *F* value and *p*-value in the last line are a test of whether the model as 
 
 <!-- 64%  -->
 
+It might be useful to assign the slope and the intercept to variables in case we need them later. The can be accessed in the `mod$coefficients` variable:
+
+```{r}
+mod$coefficients
+```
+
+![](images/do_in_R.png) Assign `mod$coefficients[1]` to `b0` and `mod$coefficients[1]` to `b1`:
+
+```{r}
+b0 <- mod$coefficients[1] |> round(2)
+b1 <- mod$coefficients[2] |> round(2)
+```
+I also rounded the values to two decimal places.
+
 
 
 ### Checking assumptions
@@ -215,17 +225,40 @@ shapiro.test(mod$residuals)
 
 
 ### Illustrating
-We want a figure with the points and a best fitting straight line.
 
-![](images/do_in_R.png) Create a figure with using both `geom_point()` and `geom_smooth()`
+We want a figure with the points and the statistical model, i.e., the best fitting straight line.
 
-NEED TO BUILD THIS UP FROM START AND REFER TO PREVIOUS WORK
+![](images/do_in_R.png) Create a scatter plot using `geom_point()`
 
- 
+
 ```{r}
-# fig size
-
 ggplot(plant, aes(x = day, y = mass)) +
+  geom_point() + 
+  theme_classic()
+```
+
+ ![](images/do_in_R.png) The `geom_smooth()` function will had a variety of fited lines to a plot. We want a line so we need to specify `method = "lm"`:
+
+```{r}
+ggplot(plant, aes(x = day, y = mass)) +
+  geom_point() +   
+  geom_smooth(method = lm, 
+              se = FALSE, 
+              colour = "black") 
+  theme_classic()
+```
+
+![](images/do_in_R.png) What do the `se` and `colour` arguments do? Try changing them.
+
+
+![](images/do_in_R.png) Let's add the equation of the line to the figure using `annotate()`:
+
+```{r}
+
+#| label: fig:regression
+#| fig-cap: "The relationship between days after planting and the mass of a plant. "
+
+fig2 <- ggplot(plant, aes(x = day, y = mass)) +
   geom_point() +
   geom_smooth(method = lm, 
               se = FALSE, 
@@ -236,19 +269,24 @@ ggplot(plant, aes(x = day, y = mass)) +
   scale_y_continuous(name = "Mass (g)",
                      limits = c(0, 120),
                      expand = c(0,0)) +
+  annotate("text", x = 15, y = 100, 
+           label = "mass = 1.61 * day - 8.68") +
   theme_classic()
-  
+
 ```
 
-Figure 2. The relationship between day since planting and mass. 
+We have to tell `annotate()` what type of geom we want - `text` in this case - where to put it, and the text we want to appear.
 
-![](images/do_in_R.png) Can you workout how to add the equation of the line to the figure like this?
 
 ```{r}
+#| include: false
 
-# fig size
+
+#---BONUS CODING ANSWER---
+# I'm not expecting you to know about this but it's a neat trick. The glue package allows
+# us to use R objects in strings so their values are printed.
 fig2 <- ggplot(plant, aes(x = day, y = mass)) +
-   geom_point() +
+  geom_point() +
   geom_smooth(method = lm, 
               se = FALSE, 
               colour = "black") +
@@ -258,10 +296,12 @@ fig2 <- ggplot(plant, aes(x = day, y = mass)) +
   scale_y_continuous(name = "Mass (g)",
                      limits = c(0, 120),
                      expand = c(0,0)) +
-  annotate("text", x = 15, y = 100, label = expression(italic("y = 1.6 x - 8.69"))) +
+  annotate("text", x = 15, y = 100, 
+           label = glue::glue("mass = {b1} day {b0}")) +
   theme_classic()
-fig2  
 ```
+
+
 
 
 ![](images/do_in_R.png) Save your figure to your `figures` folder.
@@ -294,6 +334,6 @@ These contain all the code needed in the workshop even where it is not visible o
 
 The [workshop.qmd](workshop.qmd) file is the file I use to compile the practical. Qmd stands for Quarto markdown. It allows code and ordinary text to be interweaved to produce well-formatted reports including webpages. Right-click on the link and choose Save-As to download. You will be able to open the Rmd file in RStudio. Alternatively, [View in Browser](https://github.com/3mmaRand/R4BABS/blob/main/r4babs2/week-2/workshop.qmd).Coding and thinking answers are marked with `#---CODING ANSWER---` and `#---THINKING ANSWER---`
 
-Pages made with Quarto [@allaire2022]
+Pages made with Quarto [@allaire2022], [@knitr], [@kableExtra]
 
 # References
